Modifying the accepts function to use a map
Previously the accepts function took a list of media types and a function that
took the expected type as an argument.  Because MediaType are difficult to match
against, it is easier to work with an ordered list instead.

--- a/snap-accept.cabal
+++ b/snap-accept.cabal
@@ -19,10 +19,8 @@ library
   exposed-modules: Snap.Accept
   build-depends:
     base ==4.6.*,
-    case-insensitive ==1.0.*,
     http-quality ==0.0.1,
-    snap-core ==0.9.*,
-    utf8-string ==0.3.*
+    snap-core ==0.9.*
 
 source-repository head
   type:     git
