--- a/snap-accept.cabal
+++ b/snap-accept.cabal
@@ -1,5 +1,5 @@
 name:          snap-accept
-version:       0.0.1
+version:       0.1.0
 license:       MIT
 license-file:  LICENSE
 author:        Timothy Jones
@@ -10,17 +10,37 @@ bug-reports:   http://github.com/zimothy/snap-accept/issues
 category:      Web
 copyright:     (c) 2013 Timothy Jones
 build-type:    Simple
-cabal-version: >=1.8
+cabal-version: >=1.10
 synopsis:      Adds support for Accept header parsing to the Snap web framework.
 description:
+  Complete content-type functionality as a complement to Snap's 'method' and
+  'methods' functions.  Branches based on the value of the Accept header of the
+  current request, automatically setting the Content-Type header of the
+  response.
+
+flag development
+  description: Warnings are not considered errors
+  default:     False
 
 library
   hs-source-dirs:  src
-  exposed-modules: Snap.Accept
+
+  if flag(development)
+    ghc-options: -Wall
+  else
+    ghc-options: -Wall -Werror
+
+  default-language: Haskell2010
+  default-extensions:
+    OverloadedStrings
+
+  exposed-modules:
+    Snap.Accept
+
   build-depends:
-    base ==4.6.*,
-    http-quality ==0.0.1,
-    snap-core ==0.9.*
+    base         >= 4.6.0 && < 5.0,
+    http-quality >= 0.2.0 && < 0.3,
+    snap-core    >= 0.9.4 && < 0.14
 
 source-repository head
   type:     git
