--- a/snap-accept.cabal
+++ b/snap-accept.cabal
@@ -11,7 +11,7 @@ category:      Web
 copyright:     (c) 2013 Timothy Jones
 build-type:    Simple
 cabal-version: >=1.10
-synopsis:      Adds support for Accept header parsing to the Snap web framework.
+synopsis:      Support for Accept header parsing in the Snap web framework.
 description:
   Complete content-type functionality as a complement to Snap's 'method' and
   'methods' functions.  Branches based on the value of the Accept header of the
