--- a/snap-accept.cabal
+++ b/snap-accept.cabal
@@ -4,31 +4,22 @@ license:       MIT
 license-file:  LICENSE
 author:        Timothy Jones
 maintainer:    Timothy Jones <git@zimothy.com>
-stability:     experimental
 homepage:      http://github.com/zimothy/snap-accept
 bug-reports:   http://github.com/zimothy/snap-accept/issues
 category:      Web
 copyright:     (c) 2013 Timothy Jones
 build-type:    Simple
 cabal-version: >=1.10
-synopsis:      Support for Accept header parsing in the Snap web framework.
+synopsis:      Support for Accept header parsing in the Snap web framework
 description:
-  Complete content-type functionality as a complement to Snap's 'method' and
-  'methods' functions.  Branches based on the value of the Accept header of the
-  current request, automatically setting the Content-Type header of the
-  response.
-
-flag development
-  description: Warnings are not considered errors
-  default:     False
+  HTTP media type functionality as a complement to Snap's 'method' and 'methods'
+  functions.  Branches based on the value of the Accept header of the current
+  request, automatically setting the Content-Type header of the response.
 
 library
-  hs-source-dirs:  src
+  hs-source-dirs: src
 
-  if flag(development)
-    ghc-options: -Wall
-  else
-    ghc-options: -Wall -Werror
+  ghc-options: -Wall
 
   default-language: Haskell2010
   default-extensions:
