--- a/snap-accept.cabal
+++ b/snap-accept.cabal
@@ -10,7 +10,7 @@ category:      Web
 copyright:     (c) 2013 Timothy Jones
 build-type:    Simple
 cabal-version: >=1.10
-synopsis:      Support for Accept header parsing in the Snap web framework
+synopsis:      Accept header branching for the Snap web framework
 description:
   HTTP media type functionality as a complement to Snap's 'method' and 'methods'
   functions.  Branches based on the value of the Accept header of the current
@@ -29,9 +29,9 @@ library
     Snap.Accept
 
   build-depends:
-    base         >= 4.6.0 && < 5.0,
-    http-quality >= 0.2.0 && < 0.3,
-    snap-core    >= 0.9.4 && < 0.14
+    base       >= 4.6.0 && < 5.0,
+    http-media >= 0.1.0 && < 0.2,
+    snap-core  >= 0.9.4 && < 0.14
 
 source-repository head
   type:     git
