--- a/snap-accept.cabal
+++ b/snap-accept.cabal
@@ -1,15 +1,15 @@
 name:          snap-accept
-version:       0.1.0
+version:       0.2.0-pre
 license:       MIT
 license-file:  LICENSE
 author:        Timothy Jones
-maintainer:    Timothy Jones <git@zimothy.com>
+maintainer:    Timothy Jones <tim@zmthy.net>
 homepage:      http://github.com/zimothy/snap-accept
 bug-reports:   http://github.com/zimothy/snap-accept/issues
 category:      Web
-copyright:     (c) 2013 Timothy Jones
+copyright:     (c) 2013-2017 Timothy Jones
 build-type:    Simple
-cabal-version: >=1.10
+cabal-version: >= 1.10
 synopsis:      Accept header branching for the Snap web framework
 description:
   HTTP media type functionality as a complement to Snap's 'method' and 'methods'
@@ -29,11 +29,12 @@ library
     Snap.Accept
 
   build-depends:
-    base       >= 4.6.0 && < 5.0,
-    http-media >= 0.1.0 && < 0.2,
-    snap-core  >= 0.9.4 && < 0.14
+    base             >= 4.6.0  && < 5.0,
+    bytestring       >= 0.10.0 && < 0.11,
+    case-insensitive >= 1.2.0  && < 1.3,
+    http-media       >= 0.4.0  && < 0.7,
+    snap-core        >= 0.9.4  && < 1.1
 
 source-repository head
   type:     git
-  location: git://github.com/zimothy/snap-accept.get
-
+  location: git://github.com/zimothy/snap-accept.git
