--- a/snap-accept.cabal
+++ b/snap-accept.cabal
@@ -13,8 +13,9 @@ cabal-version: >= 1.10
 synopsis:      Accept header branching for the Snap web framework
 description:
   HTTP media type functionality as a complement to Snap's 'method' and 'methods'
-  functions.  Branches based on the value of the Accept header of the current
-  request, automatically setting the Content-Type header of the response.
+  functions.  Branches based on the value of the Accept or Accept-Language
+  header of the current request, automatically setting the Content-Type or
+  Content-Language header of the response as appropriate.
 
 library
   hs-source-dirs: src
