--- a/snap-accept.cabal
+++ b/snap-accept.cabal
@@ -1,5 +1,5 @@
 name:          snap-accept
-version:       0.2.0-pre
+version:       0.2.0
 license:       MIT
 license-file:  LICENSE
 author:        Timothy Jones
