--- a/snap-accept.cabal
+++ b/snap-accept.cabal
@@ -1,11 +1,11 @@
 name:          snap-accept
-version:       0.2.0
+version:       0.2.1
 license:       MIT
 license-file:  LICENSE
 author:        Timothy Jones
 maintainer:    Timothy Jones <tim@zmthy.net>
-homepage:      http://github.com/zimothy/snap-accept
-bug-reports:   http://github.com/zimothy/snap-accept/issues
+homepage:      https://github.com/zmthy/snap-accept
+bug-reports:   https://github.com/zmthy/snap-accept/issues
 category:      Web
 copyright:     (c) 2013-2017 Timothy Jones
 build-type:    Simple
@@ -33,9 +33,9 @@ library
     base             >= 4.6.0  && < 5.0,
     bytestring       >= 0.10.0 && < 0.11,
     case-insensitive >= 1.2.0  && < 1.3,
-    http-media       >= 0.4.0  && < 0.7,
+    http-media       >= 0.6.0  && < 0.8,
     snap-core        >= 0.9.4  && < 1.1
 
 source-repository head
   type:     git
-  location: git://github.com/zimothy/snap-accept.git
+  location: https://github.com/zmthy/snap-accept
